Add bin version of executable